body of mywebsite

--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -1,1 +1,15 @@
-/*Alexandra Proxenia 17419237*/
+/*Alexandra Proxenia, student_number 17419237*/
+<html>
+<style>
+h1 {
+  color: blue;
+}
+h1 {
+  color: blue;
+}
+p {
+  color: red;
+}
+p
+</style>
+</html>
