--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -1,15 +1,15 @@
 /*Alexandra Proxenia, student_number 17419237*/
 <html>
 <style>
-h1 {
-  color: blue;
+
+ul {background: yellow;
+padding: 20px;
 }
-h1 {
-  color: blue;
+ul {background: yellow;
+padding: 20px;
 }
-p {
-  color: red;
+body {
+  font-family: 'Taviraj', serif;
 }
-p
 </style>
 </html>
