--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -7,14 +7,15 @@ padding: 20px;
 body {
   font-family: 'Taviraj', serif;
 }
-ul {background: pink;
-padding: 20px;
+ul {
+list-style: none;
+background-color: pink;
+padding: 0px;
 }
-ul{list-style-type: none;
-margin: 0;
-padding: 0;
+li:hover {background-color: yellow;
+color: purple;
 }
-ul1{list-style-type: none;
+ul1 {list-style-type: none;
 margin: 0;
 padding: 0;
 }
