--- a/csy1018/assign1/css/biofile.css
+++ b/csy1018/assign1/css/biofile.css
@@ -1,15 +1,15 @@
 /* Alexandra Proxenia, student_number 17419237 */
 /*lists*/
 body
-ul {
+ula {
 list-style-type: none;
-background-color: lightblue;
+background-color: #ff66ff;
 padding: 30px;
-margin: 20;
-padding: 20;}
-{font-family: 'Taviraj', serif;/*google webfont API*/}
+margin: 20px;
+padding: 20px;}
+{font-family: 'Taviraj', serif;}/*google webfont API*/
 li.links:hover {background-color: grey;}
 li.links
 {display: inline;
 float: right;
-padding: 8px;}
+padding: 8px;
