--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -6,14 +6,16 @@ font-family: 'Taviraj', serif;/*google webfont API*/
 /*lists*/
 ul.a {
 list-style-type: none;
-background-color: #ff66ff;
-padding: 30px;
+background-color: #ad8585;
+padding: 40px;
 }
-li {color: #000;}
-li.links:hover {background-color: grey;}
-li.links {display: inline;
+li a:hover {background-color:#996666;
+}
+li a {display: inline;
 float: right;
-padding: 8px;}
+padding: 8px 16px;
+color: white;
+text-decoration: none;}
 /*contact boxes*/
 input[type=text] {width: 50%;
 padding: 12px 20px;
@@ -32,7 +34,7 @@ box-sizing: border-box;
 color: grey;}
 input[type=email]:focus {border: 3px solid#000;}
 /*submit box*/
-input[type=submit]:hover {background-color: #ff66ff;}
+input[type=submit]:hover {background-color: #996666;}
 input[type=submit]{width: 50%;
 padding: 12px 20px;
 margin: 8px 0;
