--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -40,3 +40,4 @@ padding: 12px 20px;
 margin: 8px 0;
 box-sizing: border-box;
 color: #c2aaa3;}
+li {i style="font-size:24px" class="fa fa-envelope-o" style=font-size:36px"}
