--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -3,7 +3,7 @@
 body {
 font-family: 'Taviraj', serif;/*google webfont API*/
 }
-/*lists*/
+/*header*/
 ul.a {
 list-style-type: none;
 background-color: #ad8585;
@@ -40,4 +40,9 @@ padding: 12px 20px;
 margin: 8px 0;
 box-sizing: border-box;
 color: #c2aaa3;}
-li {i style="font-size:24px" class="fa fa-envelope-o" style=font-size:36px"}
+/*footer*/
+ul.c li {list-style: none;
+background-color: #ad8585;
+padding: 20px;
+color: #ccb3b3;
+display:block;}
