--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -40,5 +40,6 @@ padding: 12px 20px;
 margin: 8px 0;
 box-sizing: border-box;
 color: #c2aaa3;}
-foot:visited {background-color: #ad8585;}
+/*footer*/
+footer {background-color: #ad8585;}
 /*footer*/
