add text in resume page

--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -41,5 +41,6 @@ margin: 8px 0;
 box-sizing: border-box;
 color: #c2aaa3;}
 /*footer*/
-footer {background-color: #ad8585;}
+footer {background-color: #ad8585;
+color:#ebe0e0;}
 /*footer*/
