--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -18,6 +18,7 @@ float: right;
 padding: 8px 16px;
 color: white;
 text-decoration: none;}
+/*hader*/
 /*contact boxes*/
 input[type=text] {width: 70%;
 padding: 12px 20px;
@@ -42,11 +43,12 @@ padding: 12px 20px;
 margin: 8px 0;
 box-sizing: border-box;
 color: #c2aaa3;}
+/*end of contact boxes*/
 /*footer*/
 footer {background-color: #ad8585;
 color:#ebe0e0;}
 /*footer*/
-/*image book*/
+/*image book center*/
 img.book {max-width: 750px;
 height: auto;}
 .container {position: relative;
@@ -55,3 +57,23 @@ color: white;}
 bottom:8px;
 right: 16px;
 font-size: 18px;}
+/*end of image book center*/
+/*gallery images*/
+div.stackofbooks {margin: 5px;
+border-radius: 50%;
+width: auto;
+height: auto;;
+margin: auto;}
+div.description {padding: 10px 20px;
+text-align: center;}
+div.oldbooks {margin: 5px;
+border-radius: 50%;
+margin: auto;
+width: auto;}
+div.descr {padding: 15px;
+text-align: center;}
+div.fotobox{width: 750;
+border: 5px solid grey;
+padding: 25px;
+margin:25px;
+margin-bottom: 60px;}
