--- a/csy1018/assign1/css/file.css
+++ b/csy1018/assign1/css/file.css
@@ -18,7 +18,7 @@ float: right;
 padding: 8px 16px;
 color: white;
 text-decoration: none;}
-/*hader*/
+/*end of header*/
 /*contact boxes*/
 input[type=text] {width: 70%;
 padding: 12px 20px;
@@ -75,6 +75,7 @@ width: auto;
 padding-left: 45px;}
 div.descr {padding: 15px;
 text-align: center;}
+/*box in index page*/
 div.fotobox{max-width: 750px;
 border: 5px solid #ad8585;
 padding: 20px;
