--- a/csy1018-assign1/css/file.css
+++ b/csy1018-assign1/css/file.css
@@ -2,42 +2,43 @@
 /*font*/
 body {
 font-family: 'Taviraj', serif;/*google webfont API*/
-max-width: 750px;
+max-width: 750px;/*width depend of the screen,comfortable in mobiles*/
 margin: auto;
 }
 /*header*/
 ul.a {
-list-style-type: none;
+list-style-type: none;/*without number or bullets*/
 background-color: #ad8585;
 padding: 50px;
 }
-li a:hover {background-color:#996666;
+li a:hover {background-color:#996666;/*the color of hover*/
 }
-li a {display: inline;
-float: right;
-padding: 8px 16px;
-color: white;
-text-decoration: none;}
+li a {display: inline;/*display horizontal*/
+float: right;/*the words is on the right site*/
+padding: 8px 16px;/*the words have a distance between them and they are not on the center of the nav bar*/
+color: white;/*the words color*/
+text-decoration: none;}/*no further decoration*/
 /*end of header*/
 /*contact boxes*/
+/*the type of box is text*/
 input[type=text] {width: 70%;
 padding: 12px 20px;
 margin: 8px 0;
-box-sizing: border-box;
-color: #c2aaa3;}
-input[type=text]:focus {border: 3px solid #000;}
+box-sizing: border-box;/*the box width,the padding when we wrote and margin*/
+color: #c2aaa3;}/*the color of the text when we write inside*/
+input[type=text]:focus {border: 3px solid #000;}/*we can write text inside and the color of border change when we write inside of the box*/
 /*textarea box*/
 textarea
-{width: 70%;
-height: 300px;}
+{width: 70%;/*the width  of text*/
+height: 300px;}/*and height of the text*/
 /*email box*/
-input[type=email]
+input[type=email]/*here we write the address of email*/
 {width: 70%;
 padding: 12px 20px;
 margin: 8px 0;
 box-sizing: border-box;
-color: #c2aaa3;}
-input[type=email]:focus {border: 3px solid#000;}
+color: #c2aaa3;}/*the box size and the color of text */
+input[type=email]:focus {border: 3px solid#000;}/*its border and the color of border when we write inside*/
 /*submit box*/
 input[type=submit]:hover {background-color: #996666;}
 input[type=submit]{width: 70%;
@@ -49,6 +50,7 @@ color: #c2aaa3;}
 /*footer*/
 footer {background-color: #ad8585;
 color: #ebe0e0;}
+/*flexboxes*/
 .flex-container {display: -webkit-flex;/*i use chrone*/
 display: flex;
 -webkit-flex-direction: column;
@@ -58,10 +60,11 @@ height: 200px;}
 width: 160px;
 height: 50px;
 margin: 5px;}
+/*end of flexboxes*/
 .copuright{text-align: right;}
 /*footer*/
 /*image book center*/
-img.book {max-width: 750px;
+img.book {max-width: 750px;/*width depend of the screen,comfortable in mobiles*/
 height: auto;}
 .container {position: relative;
 color: white;}
